--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/react": "^2.9.1",
     "@remix-run/serve": "^2.9.1",
     "isbot": "^4.1.0",
+    "openai": "^4.38.5",
     "prisma": "^5.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
